--- a/android-project/UniGame/app/src/main/res/drawable/button_design.xml
+++ b/android-project/UniGame/app/src/main/res/drawable/button_design.xml
@@ -1,25 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true" >
-        <shape android:shape="rectangle"  >
-            <corners android:radius="50dip" />
-            <!-- <stroke android:width="1dip" android:color="#5e7974" /> -->
-            <!-- <gradient android:angle="-90" android:startColor="#345953" android:endColor="#689a92"  /> -->
-            <stroke android:width="1dip" android:color="#5e7974" />
-            <gradient android:angle="-90" android:startColor="@color/Yellow" android:endColor="@color/LightYellow"  />
-        </shape>
-    </item>
-    <item android:state_focused="true">
-        <shape android:shape="rectangle"  >
-            <corners android:radius="50dip" />
-            <stroke android:width="1dip" android:color="#5e7974" />
-            <solid android:color="@color/Yellow"/>
-        </shape>
-    </item>
-    <item >
-        <shape android:shape="rectangle"  >
-            <corners android:radius="100dip" />
-            <gradient android:angle="-90" android:startColor="@color/Yellow" android:endColor="@color/LightYellow" />
-        </shape>
-    </item>
+    <item android:state_pressed="true" android:drawable="@drawable/btn_pressed"></item>
+    <!-- <item android:state_focused="true" android:drawable="@drawable/btn_focused"></item> -->
+    <item android:drawable="@drawable/btn_default"></item>
 </selector>
