--- a/android-project/UniGame/app/src/main/res/drawable/btn_blue_default.xml
+++ b/android-project/UniGame/app/src/main/res/drawable/btn_blue_default.xml
@@ -5,7 +5,7 @@
         <shape android:shape="rectangle"  >
             <corners android:radius="100dip" />
             <stroke android:color="@color/Black" android:width="4dp"/>
-            <gradient android:angle="-90" android:startColor="@color/Yellow" android:endColor="@color/Orange" />
+            <gradient android:angle="-90" android:startColor="@color/LightBlue" android:endColor="@color/CornflowerBlue" />
         </shape>
     </item>
 
