--- a/android-project/UniGame/app/src/main/res/layout/activity_crear_db.xml
+++ b/android-project/UniGame/app/src/main/res/layout/activity_crear_db.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -100,17 +101,32 @@
                     android:gravity="center"
                     android:layout_margin="5dip"
                     android:layout_weight="0.16"/>
-                <Button
-                    android:id="@+id/use_questions"
-                    android:layout_width="80sp"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="0dip"
-                    android:text="@string/btn_create"
-                    android:textColor="@color/black_overlay"
-                    android:background="@drawable/btn_blue_dessign"
-                    android:layout_gravity="center"
-                    android:clickable="true"
-                    android:layout_margin="5dip"
-                    android:layout_weight="0.16"/>
+                    android:layout_weight="0.16"
+                    android:orientation="horizontal">
+                    <RelativeLayout
+                        android:layout_width="0dip"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.5"></RelativeLayout>
+                    <Button
+                        android:id="@+id/use_questions"
+                        android:layout_width="0dip"
+                        android:layout_weight="1"
+                        android:layout_height="match_parent"
+                        android:text="@string/btn_create"
+                        android:textColor="@color/black_overlay"
+                        android:background="@drawable/btn_blue_dessign"
+                        android:layout_gravity="center"
+                        android:clickable="true"
+                        android:layout_margin="5dip"
+                        />
+                    <RelativeLayout
+                        android:layout_width="0dip"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.5"></RelativeLayout>
+                </LinearLayout>
             </LinearLayout>
             <RelativeLayout
                 android:layout_width="match_parent"
