--- a/android-project/UniGame/app/src/main/res/layout/activity_lista_preguntas.xml
+++ b/android-project/UniGame/app/src/main/res/layout/activity_lista_preguntas.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" android:background="#0099cc"
     android:orientation="horizontal"
-    tools:context=".app.presentacion.controlador.impl.CrearDB">
+    tools:context=".app.presentacion.controlador.impl.ListaPreguntas">
 
     <RelativeLayout
         android:layout_width="0dip"
@@ -37,6 +37,8 @@
                 android:layout_weight="0.8"
                 android:orientation="vertical">
                 <TextView
+                    android:id="@+id/txt_name_db"
+                    android:textColor="@color/Black"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="20sp"/>
@@ -45,7 +47,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dip"
                     android:text="@string/btn_individual_mode"
-                    android:background="@drawable/btn_blue_dessign"
+                    android:background="@drawable/button_design"
                     android:layout_weight="0.2"/>
                 <ListView
                     android:layout_weight="0.8"
