--- a/android-project/UniGame/app/src/main/res/values/styles.xml
+++ b/android-project/UniGame/app/src/main/res/values/styles.xml
@@ -1,6 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Estilos UniGame -->
+    <!-- Difinición de los estilos de los contendores horizontales -->
+    <style name="ll_main_horizontal">
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:background">@color/ApplicationBackground</item>
+        <item name="android:orientation">horizontal</item>
+    </style>
 
+    <style name="rl_main_left">
+        <item name="android:layout_width">0dip</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_weight">0.10</item>
+    </style>
+
+    <style name="rl_main_central">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">0dip</item>
+        <item name="android:layout_weight">0.8</item>
+    </style>
+    
+    <style name="rl_main_right">
+        <item name="android:layout_width">0dip</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_weight">0.10</item>
+    </style>
+
+    <!-- Difinición de los estilos de los contendores verticales -->
+    <!-- Contenido del rl_main_central -->
+    <style name="ll_main_central_vertical">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:orientation">vertical</item>
+    </style>
+    <style name="rl_main_top">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">0dip</item>
+        <item name="android:layout_weight">0.05</item>
+    </style>
+
+    <style name="img_main_logo">
+        <item name="android:layout_margin">2dip</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">0dip</item>
+        <item name="android:layout_weight">0.2</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:src">@drawable/ug_250px</item>
+    </style>
+
+    <style name="ll_main_container">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">0dip</item>
+        <item name="android:layout_weight">0.8</item>
+        <item name="android:orientation">vertical</item>
+    </style>
+
+    <style name="rl_main_bottom">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">0dip</item>
+        <item name="android:layout_weight">0.05</item>
+    </style>
+    <!-- Fin estilos UniGame -->
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
