--- a/android-project/UniGame/app/src/main/res/drawable/btn_selected_answer_default.xml
+++ b/android-project/UniGame/app/src/main/res/drawable/btn_selected_answer_default.xml
@@ -2,9 +2,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:left="0dp" android:top="0dp">
         <shape android:shape="rectangle"  >
-            <corners android:radius="100dip" />
+            <corners android:radius="25dip" />
             <stroke android:color="@color/Black" android:width="2dp"/>
-            <solid android:color="@color/Orange"/>
+            <gradient android:angle="90" android:gradientRadius="650" android:centerX="0"
+                android:startColor="@color/IndianRed" android:endColor="@color/OrangeRed" />
         </shape>
     </item>
 </selector>
