--- a/android-project/UniGame/app/src/main/res/layout/activity_editar_pregunta.xml
+++ b/android-project/UniGame/app/src/main/res/layout/activity_editar_pregunta.xml
@@ -78,6 +78,7 @@
                     android:background="@drawable/button_design"
                     android:clickable="true"
                     android:text="@string/btn_create"
+                    android:onClick="Crear_Click"
                     android:textColor="@color/black_overlay" />
             </LinearLayout>
 
