ListaBaseDatos, ListaUniversidades arregladas

--- a/android-project/UniGame/app/src/main/res/layout/activity_lista_bases_datos.xml
+++ b/android-project/UniGame/app/src/main/res/layout/activity_lista_bases_datos.xml
@@ -14,18 +14,12 @@
             <RelativeLayout
                 style="@style/rl_main_top">
             </RelativeLayout>
-            <ImageView
-                android:id="@+id/imageView"
-                style="@style/img_main_logo"/>
+            <TextView
+                style="@style/txt_title"
+                android:text="@string/txt_individual_mode"/>
             <LinearLayout
                 android:orientation="vertical"
                 style="@style/ll_main_container">
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/txt_individual_mode"
-                    android:textSize="16sp"
-                    android:textColor="@color/Black"/>
                 <ListView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
