--- a/android-project/UniGame/app/src/main/res/layout/activity_lista_preguntas.xml
+++ b/android-project/UniGame/app/src/main/res/layout/activity_lista_preguntas.xml
@@ -33,7 +33,7 @@
                     android:text="@string/btn_individual_mode"
                     android:background="@drawable/button_design"
                     android:layout_weight="0.2"/>
-                <ListView xmlns:tools="http://schemas.android.com/tools"
+                <ListView
                     android:layout_weight="0.8"
                     android:layout_width="match_parent"
                     android:layout_height="0dip"
