--- a/android-project/UniGame/app/src/main/res/layout/activity_lista_universidades.xml
+++ b/android-project/UniGame/app/src/main/res/layout/activity_lista_universidades.xml
@@ -23,10 +23,9 @@
                 style="@style/ll_main_container">
 
                 <ListView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    style="@style/lv_default"
                     android:id="@+id/lv_universidades"
-                    android:background="@android:color/transparent">
+                    >
                 </ListView>
 
             </LinearLayout>
