--- a/android-project/UniGame/app/src/main/res/values/styles.xml
+++ b/android-project/UniGame/app/src/main/res/values/styles.xml
@@ -105,6 +105,7 @@
         <item name="android:gravity">center</item>
         <item name="android:textColor">@color/Black</item>
         <item name="android:textSize">25sp</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <!-- Estilo TextView secundario del título -->
@@ -114,6 +115,7 @@
         <item name="android:layout_weight">0.20</item>
         <item name="android:gravity">center</item>
         <item name="android:textColor">@color/Black</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <!-- Layout para composición de títulos -->
