--- a/android-project/UniGame/app/src/main/res/layout/activity_lista_preguntas.xml
+++ b/android-project/UniGame/app/src/main/res/layout/activity_lista_preguntas.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/ll_main_horizontal"
-    tools:context=".app.presentacion.controlador.impl.CrearDB">
+    tools:context=".app.presentacion.controlador.impl.ListaPreguntas">
 
     <RelativeLayout
         style="@style/rl_main_left">
