--- a/android-project/UniGame/app/src/main/res/layout/activity_main.xml
+++ b/android-project/UniGame/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/ll_main_horizontal"
-    tools:context=".app.presentacion.controlador.impl.CrearDB">
+    tools:context=".app.presentacion.controlador.impl.MainActivity">
 
     <RelativeLayout
         style="@style/rl_main_left">
@@ -31,6 +31,7 @@
                     android:background="@drawable/button_design"
                     android:clickable="true"
                     android:text="@string/individual_mode"
+                    android:textStyle="bold"
                     android:textColor="@color/black_overlay" />
 
                 <Button
@@ -43,6 +44,7 @@
                     android:background="@drawable/button_design"
                     android:clickable="true"
                     android:text="@string/tournament_mode"
+                    android:textStyle="bold"
                     android:textColor="@color/black_overlay" />
 
                 <Button
@@ -55,6 +57,7 @@
                     android:background="@drawable/button_design"
                     android:clickable="true"
                     android:text="@string/download_questions"
+                    android:textStyle="bold"
                     android:textColor="@color/black_overlay" />
 
                 <Button
@@ -67,6 +70,7 @@
                     android:background="@drawable/button_design"
                     android:clickable="true"
                     android:text="@string/use_questions"
+                    android:textStyle="bold"
                     android:textColor="@color/black_overlay" />
             </LinearLayout>
             <RelativeLayout
