--- a/android-project/UniGame/app/src/main/res/layout/list_item_asignaturas.xml
+++ b/android-project/UniGame/app/src/main/res/layout/list_item_asignaturas.xml
@@ -12,6 +12,7 @@
         android:textSize="22sp"
         android:padding="5dip"
         android:textStyle="bold"
+        android:textColor="@color/Black"
         android:gravity="center_horizontal"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="20dp"
@@ -21,6 +22,7 @@
         android:layout_alignParentRight="true"
         android:layout_height="wrap_content"
         android:layout_marginRight="20dp"
+        android:onClick="onCheckBoxClicked"
         android:checked="false" />
 
 </RelativeLayout>
